data/all_generated_tests/raw_wast_tests/block_StackCorruption_1915.wast
;; 6. **Block with Implicit Label Mismanagement**:    - Introduce a block where the implicit label is mishandled, causing operand mismatches when branching to the block.    - Monitor if one implementation leads to stack corruption due to incorrect label referencing.

(assert_invalid
  (module (func $block-implicit-label-mismanagement
    (block (result i32) 
      (i32.const 42)
      (br 0)
      (i64.const 0)
    )
  ))
  "type mismatch"
)